--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.0",
-        "social-links/social-links": "^1.13"
+        "social-links/social-links": "^1.13",
+        "curl/curl": "^1.8"
     }
 }
